--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 /* Style Sheet */
 h1 {
 	text-align: center;
+	font-family: Tahoma, Geneva, sans-serif;
 }
 
 #board-container{
@@ -23,4 +24,13 @@ h1 {
 
 .oBox {
 	background-color: blue;
+}
+
+#game_msg {
+	width: 450px;
+	margin: 20px auto;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 24px;
+	height: 32px;
+	text-align: center;
 }
