--- a/main.css
+++ b/main.css
@@ -16,6 +16,12 @@ h1 {
 	border: 1px solid #ccc;
 	margin: 0 5px 5px 0;
 	display: inline-block;
+	overflow: hidden;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 40px;
+	font-weight: bold;
+	text-align: center;
+	color: #ffffff;
 }
 
 .xBox {
